--- a/Midterm/midterm,.html
+++ b/Midterm/midterm,.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TV Show Title</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
+  <!-- page starts -->
+  <div id="wrapper">
+
+    <!-- Page header-->
+    <header>
+
+    </header>
+
+    <!-- Main navigation -->
+    <nav>
+
+    </nav>
+    <!-- Main content -->
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
+  </div> <!-- closing #wrapper -->
+  <!-- page ends -->
 </body>
 </html>
