--- a/exercise4/exercise4.html
+++ b/exercise4/exercise4.html
@@ -5,8 +5,12 @@
     <title>Exercise 4</title>
 
     <style>
-    /* Type CSS code here */
-
+      .content {
+        background-image: url('background-image1.jpg'), url('background-image2.jpg');
+        background-repeat: no-repeat, repeat;
+        background-position: top left, bottom right;
+        padding: 20px; /* Add padding to see the backgrounds */
+      }
     </style>
 
   </head>
