--- a/exercise6/exercise6.html
+++ b/exercise6/exercise6.html
@@ -5,8 +5,27 @@
     <title>Exercise 6</title>
 
     <style>
-    /* Type CSS code here */
+    /* Float the paragraphs side by side */
+.col-left {
+  float: left;
+  width: 48%;
+  margin-right: 4%; /* Space between columns */
+}
 
+.col-right {
+  float: right;
+  width: 48%;
+}
+
+/* Clear floats from both sides to prevent footer from moving next to paragraphs */
+footer {
+  clear: both;
+}
+
+/* Optional: Add some styling to improve readability */
+.content {
+  overflow: hidden; /* Clear the floats in the content div */
+}
     </style>
 
   </head>
