--- a/quizzes/quiz3.html
+++ b/quizzes/quiz3.html
@@ -21,11 +21,14 @@
             grid-row-gap:16px;
         }
 
-        .one{
-            background-color: aqua;
-            grid-column-start: 1;
-            grid-column-end: 4;
-        }
+        .one {
+    background-color: aqua;
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 1; /* Start at the first row */
+    grid-row-end: 3; /* End at the third row */
+}
+
 
         .two, .three, .four{
             background-color:coral;
