--- a/quizzes/quiz4.html
+++ b/quizzes/quiz4.html
@@ -6,24 +6,36 @@
     <title>Quiz 4</title>
 
     <style>
-      .colorboxes{
-        margin:100px;
-        width:500px;
-      }
-      .box{
-        padding:50px;
-        color:white;
-        text-align:center;
-      }
-      .redbox{
-        background-color:red;
-      }
-      .bluebox{
-        background-color:blue;
-      }
-      .greenbox{
-        background-color:green;
-      }
+    .colorboxes {
+    margin: 100px;
+    width: 500px;
+    position: relative; /* Set the positioning context for absolute positioning */
+}
+
+.box {
+    padding: 50px;
+    color: white;
+    text-align: center;
+    position: absolute; /* Position the boxes absolutely */
+}
+
+.redbox {
+    background-color: red;
+    top: 0; /* Position at the top */
+    left: 0; /* Position at the left */
+}
+
+.bluebox {
+    background-color: blue;
+    top: 50px; /* Position 50px from the top */
+    left: 50px; /* Position 50px from the left */
+}
+
+.greenbox {
+    background-color: green;
+    top: 100px; /* Position 100px from the top */
+    left: 100px; /* Position 100px from the left */
+}
       </style>
 
   </head>
