--- a/exercise5/exercise5.html
+++ b/exercise5/exercise5.html
@@ -1,67 +1,55 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Exercise 5</title>
-
-    <style>
-
-    #wrapper{
-      max-width:1170px;
-      margin:0 auto;
+<head>
+  <meta charset="utf-8">
+  <title>Exercise 5</title>
+  <style>
+    #wrapper {
+      max-width: 1170px;
+      margin: 0 auto;
       font-family: sans-serif;
     }
-      
- /* Apply the same color to the link and visited state of all hyperlinks */
-a {
-  color: blue;
-  text-decoration: none; /* Remove underline */
-}
 
-/* Add a hover state to hyperlinks */
-a:hover {
-  text-decoration: underline; /* Add underline on hover */
-}
+    
+    a {
+      color: #333;
+    }
 
-/* Use a descendant selector to select the hyperlinks elements in the navigation list */
-nav ul li a {
-  color: black; /* Set color to black for all hyperlinks in navigation */
-}
+    a:hover {
+      text-decoration: underline;
+    }
 
-/* Remove underline from navigation links in all states but hover */
-nav ul li a {
-  text-decoration: none;
-}
+    nav a {
+      color: black;
+      text-decoration: none;
+    }
 
-/* Add a focus state to the input box */
-#emailbox:focus {
-  background-color: lightgray; /* Change background color when focused */
-  border: 1px solid gray; /* Add border when focused */
-}
-    </style>
-
-  </head>
-  <body>
-    <div id="wrapper">
-      <nav>
-        <ul>
-          <li><a href="#">BMCC</a></li>
-          <li><a href="#">BCC</a></li>
-          <li><a href="#">QCC</a></li>
-          <li><a href="#">Hostos</a></li>
-          <li><a href="#">LaGuardia</a></li>
-          <li><a href="#">Guttman</a></li>
-        </ul>
-      </nav>
-      <div class="content">
-        <h1>Borough of Manhattan Community College</h1>
-        <p><a href="https://www.bmcc.cuny.edu/">BMCC</a> is a college that is alive with ideas and innovation, and supportive of the innate human striving for self-improvement. We offer opportunity to those students who desire it and wish to strive for it.</p>
-        <h3>Request More Information</h3>
-        <form action="#" method="get">
+    input:focus {
+      outline: 2px solid blue;
+    }
+  </style>
+</head>
+<body>
+  <div id="wrapper">
+    <nav>
+      <ul>
+        <li><a href="#">BMCC</a></li>
+        <li><a href="#">BCC</a></li>
+        <li><a href="#">QCC</a></li>
+        <li><a href="#">Hostos</a></li>
+        <li><a href="#">LaGuardia</a></li>
+        <li><a href="#">Guttman</a></li>
+      </ul>
+    </nav>
+    <div class="content">
+      <h1>Borough of Manhattan Community College</h1>
+      <p><a href="https://www.bmcc.cuny.edu/">BMCC</a> is a college that is alive with ideas and innovation, and supportive of the innate human striving for self-improvement. We offer opportunity to those students who desire it and wish to strive for it.</p>
+      <h3>Request More Information</h3>
+      <form action="#" method="get">
         <input type="text" id="emailbox" name="emailbox" placeholder="Your email">
         <button>Submit</button>
-          </form>
-      </div> <!-- .content -->
-    </div> <!-- #wrapper -->
-  </body>
+      </form>
+    </div> <!-- .content -->
+  </div> <!-- #wrapper -->
+</body>
 </html>
