--- a/quizzes/quiz4.html
+++ b/quizzes/quiz4.html
@@ -6,37 +6,30 @@
     <title>Quiz 4</title>
 
     <style>
-    .colorboxes {
-    margin: 100px;
-    width: 500px;
-    position: relative; /* Set the positioning context for absolute positioning */
-}
-
-.box {
-    padding: 50px;
-    color: white;
-    text-align: center;
-    position: absolute; /* Position the boxes absolutely */
-}
-
-.redbox {
-    background-color: red;
-    top: 0; /* Position at the top */
-    left: 0; /* Position at the left */
-}
-
-.bluebox {
-    background-color: blue;
-    top: 50px; /* Position 50px from the top */
-    left: 50px; /* Position 50px from the left */
-}
-
-.greenbox {
-    background-color: green;
-    top: 100px; /* Position 100px from the top */
-    left: 100px; /* Position 100px from the left */
-}
-      </style>
+      .colorboxes {
+        margin: 100px;
+        width: 500px;
+        position: relative; /* Set position to relative for the container */
+      }
+      .box {
+        padding: 50px;
+        color: white;
+        text-align: center;
+      }
+      .redbox {
+        background-color: red;
+      }
+      .bluebox {
+        background-color: blue;
+        position: absolute; /* Set position to absolute for the blue box */
+        top: -0px; /* Move the blue box up by 0px */
+        left: 0; /* Keep the blue box aligned with the red box horizontally */
+        z-index: 1; /* Ensure the blue box is on top of the red box */
+      }
+      .greenbox {
+        background-color: green;
+      }
+    </style>
 
   </head>
   <body>
@@ -47,3 +40,4 @@
     </div>
   </body>
 </html>
+
