--- a/quizzes/quiz2.html
+++ b/quizzes/quiz2.html
@@ -8,28 +8,27 @@
     
     <style>
         .container {
-            max-width: 1140px;
-            height: 500px;
-            margin-left: auto;
-            margin-right: auto;
-            display: flex;
-            flex-direction: row;
-            background-color: cornflowerblue;
-            justify-content: space-between; /* Distribute items evenly in the line */
-            align-items: center; /* Center items vertically in the container */
-        }
+    max-width: 1140px;
+    height: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: row;
+    background-color: cornflowerblue;
+    justify-content: space-around; /* Distribute items evenly in the line */
+    align-items: center; /* Center items vertically in the container */
+}
+.box {
+    width: 200px;
+    height: 200px;
+    background-color: deeppink;
+    margin: 16px;
+    text-align: center;
+}
+.jump {
+    align-self: flex-end; /* Bring this box to the bottom of the flexbox */
+} 
 
-        .box {
-            width: 200px;
-            height: 200px;
-            background-color: deeppink;
-            margin: 16px;
-            text-align: center;
-        }
-
-        .jump {
-            align-self: flex-end; /* Bring this box to the bottom of the flexbox */
-        } 
     </style>
 
   </head>
