--- a/exercise5/exercise5.html
+++ b/exercise5/exercise5.html
@@ -1,43 +1,58 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Exercise 5</title>
-
-    <style>
-
-    #wrapper{
-      max-width:1170px;
-      margin:0 auto;
+<head>
+  <meta charset="utf-8">
+  <title>Exercise 5</title>
+  <style>
+    #wrapper {
+      max-width: 1170px;
+      margin: 0 auto;
       font-family: sans-serif;
     }
-      
- /* Add CSS code here */
 
-    </style>
+    a {
+      color: #333;
+      text-decoration: none; /* Remove underline from all links */
+    }
 
-  </head>
-  <body>
-    <div id="wrapper">
-      <nav>
-        <ul>
-          <li><a href="#">BMCC</a></li>
-          <li><a href="#">BCC</a></li>
-          <li><a href="#">QCC</a></li>
-          <li><a href="#">Hostos</a></li>
-          <li><a href="#">LaGuardia</a></li>
-          <li><a href="#">Guttman</a></li>
-        </ul>
-      </nav>
-      <div class="content">
-        <h1>Borough of Manhattan Community College</h1>
-        <p><a href="https://www.bmcc.cuny.edu/">BMCC</a> is a college that is alive with ideas and innovation, and supportive of the innate human striving for self-improvement. We offer opportunity to those students who desire it and wish to strive for it.</p>
-        <h3>Request More Information</h3>
-        <form action="#" method="get">
+    a:hover {
+      text-decoration: underline; /* Add underline on hover */
+    }
+
+    nav a {
+      color: black; /* Make navigation links black */
+    }
+
+    nav a:hover {
+      text-decoration: underline; /* Add underline on hover for navigation links */
+    }
+
+    input:focus {
+      outline: 2px solid blue; /* Add blue outline on focus for input */
+    }
+  </style>
+</head>
+<body>
+  <div id="wrapper">
+    <nav>
+      <ul>
+        <li><a href="#">BMCC</a></li>
+        <li><a href="#">BCC</a></li>
+        <li><a href="#">QCC</a></li>
+        <li><a href="#">Hostos</a></li>
+        <li><a href="#">LaGuardia</a></li>
+        <li><a href="#">Guttman</a></li>
+      </ul>
+    </nav>
+    <div class="content">
+      <h1>Borough of Manhattan Community College</h1>
+      <p><a href="https://www.bmcc.cuny.edu/">BMCC</a> is a college that is alive with ideas and innovation, and supportive of the innate human striving for self-improvement. We offer opportunity to those students who desire it and wish to strive for it.</p>
+      <h3>Request More Information</h3>
+      <form action="#" method="get">
         <input type="text" id="emailbox" name="emailbox" placeholder="Your email">
         <button>Submit</button>
-          </form>
-      </div> <!-- .content -->
-    </div> <!-- #wrapper -->
-  </body>
+      </form>
+    </div> <!-- .content -->
+  </div> <!-- #wrapper -->
+</body>
 </html>
