--- a/quizzes/quiz3.html
+++ b/quizzes/quiz3.html
@@ -6,30 +6,33 @@
     <title>Quiz 3</title>
     <style>
 
-        #wrapper{
-            max-width: 1200px;
-            margin-left:auto;
-            margin-right:auto;
-            padding:16px;
-        }
+#wrapper{
+    max-width: 1200px;
+    margin-left:auto;
+    margin-right:auto;
+    padding:16px;
+}
 
-        .layout{
-            display:grid;
-            grid-template-rows: 300px 300px;
-            grid-template-columns: 33.3% 33.3% 33.3%;
-            grid-column-gap: 16px;
-            grid-row-gap:16px;
-        }
+.layout{
+    display:grid;
+    grid-template-rows: 300px 300px;
+    grid-template-columns: 20% 40% 40%; 
+    grid-column-gap: 16px;
+    grid-row-gap:16px;
+}
 
-        .one{
-            background-color: aqua;
-            grid-column-start: 1;
-            grid-column-end: 4;
-        }
+.one {
+    background-color: aqua;
+    grid-column-start: 1;
+    grid-column-end: 2; 
+    grid-row-start: 1;
+    grid-row-end: 3; 
+}
 
-        .two, .three, .four{
-            background-color:coral;
-        }
+.two, .three, .four {
+    background-color: coral;
+}
+
 
       </style>
 
