--- a/exercise3/exercise3.html
+++ b/exercise3/exercise3.html
@@ -7,14 +7,14 @@
     <style>
       
       body {
-  max-width: 640px; /* Change the width of the page to be 640 pixels */
+  max-width: 640px; 
   margin-left: auto;
-  margin-right: auto; /* Center the whole page in the browser window */
+  margin-right: auto; 
 }
 p {
-  border: 2px solid #333; /* Add a border for each paragraph */
-  padding: 1em; /* Add padding equal to one font size inside the paragraphs */
-  margin-bottom: 2em; /* Add a margin equal to two font sizes between the paragraphs */
+  border: 2px solid #333; 
+  padding: 1em; 
+  margin-bottom: 2em; 
 }
     </style>
 
@@ -28,4 +28,3 @@ p {
     </p>
   </body>
 </html>
-
