--- a/exercise5/exercise5.html
+++ b/exercise5/exercise5.html
@@ -9,26 +9,24 @@
       margin: 0 auto;
       font-family: sans-serif;
     }
-
     a {
       color: #333;
-      text-decoration: none; /* Remove underline from all links */
+      text-decoration: none; 
     }
-
     a:hover {
-      text-decoration: underline; /* Add underline on hover */
+      text-decoration: underline; 
     }
 
     nav a {
-      color: black; /* Make navigation links black */
+      color: black; 
     }
 
     nav a:hover {
-      text-decoration: underline; /* Add underline on hover for navigation links */
+      text-decoration: underline; 
     }
 
     input:focus {
-      outline: 2px solid blue; /* Add blue outline on focus for input */
+      outline: 2px solid blue; 
     }
   </style>
 </head>
@@ -52,7 +50,7 @@
         <input type="text" id="emailbox" name="emailbox" placeholder="Your email">
         <button>Submit</button>
       </form>
-    </div> <!-- .content -->
-  </div> <!-- #wrapper -->
+    </div> 
+  </div> 
 </body>
 </html>
