--- a/exercise6/exercise6.html
+++ b/exercise6/exercise6.html
@@ -5,11 +5,11 @@
     <title>Exercise 6</title>
 
     <style>
-    /* Float the paragraphs side by side */
+    
 .col-left {
   float: left;
   width: 48%;
-  margin-right: 4%; /* Space between columns */
+  margin-right: 4%; 
 }
 
 .col-right {
@@ -17,14 +17,14 @@
   width: 48%;
 }
 
-/* Clear floats from both sides to prevent footer from moving next to paragraphs */
+
 footer {
   clear: both;
 }
 
-/* Optional: Add some styling to improve readability */
+
 .content {
-  overflow: hidden; /* Clear the floats in the content div */
+  overflow: hidden; 
 }
     </style>
 
