--- a/exercise7/exercise7.html
+++ b/exercise7/exercise7.html
@@ -5,17 +5,17 @@
     <title>Exercise 7</title>
 
     <style>
-    /* Change the display of the parent element to flex */
+    
 .flex-container {
   display: flex;
 }
 
-/* Force the flex items to expand to fill the available space */
+
 .flex-item {
   flex: 1 0 auto;
 }
 
-/* Make the first flex item twice the size of the other items */
+
 .lead {
   flex: 2 0 0;
 }
@@ -73,7 +73,7 @@
           <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         </div>
 
-      </div> <!-- closing .flex-container -->
-  </div> <!-- closing #wrapper -->
+      </div> 
+  </div> 
 </body>
 </html>
