--- a/exercise8/exercise8.html
+++ b/exercise8/exercise8.html
@@ -9,23 +9,23 @@
     <style>
     @media (max-width: 768px) {
   nav {
-    padding: 0; /* Remove padding */
+    padding: 0; 
   }
 
   nav ul {
-    display: block; /* Change display to block */
+    display: block; 
   }
 
   nav li {
-    display: block; /* Change display to block */
-    padding: 1em 0; /* Add padding */
-    border-right: none; /* Remove right border */
-    border-bottom: solid 1px #fff; /* Add bottom border */
+    display: block; 
+    padding: 1em 0; 
+    border-right: none; 
+    border-bottom: solid 1px #fff; 
   }
 }
 
 
-    ul{              /* resetting ul defaults padding and margins */
+    ul{              
       padding:0;
       margin:0;
     }
@@ -75,7 +75,6 @@
           <li><a href="#">Guttman</a></li>
         </ul>
       </nav>
-    </div> <!-- #wrapper -->
+    </div> 
   </body>
 </html>
-
