--- a/quizzes/quiz4.html
+++ b/quizzes/quiz4.html
@@ -9,7 +9,7 @@
       .colorboxes {
         margin: 100px;
         width: 500px;
-        position: relative; /* Set position to relative for the container */
+        position: relative; 
       }
       .box {
         padding: 50px;
@@ -21,10 +21,10 @@
       }
       .bluebox {
         background-color: blue;
-        position: absolute; /* Set position to absolute for the blue box */
-        top: -0px; /* Move the blue box up by 0px */
-        left: 0; /* Keep the blue box aligned with the red box horizontally */
-        z-index: 1; /* Ensure the blue box is on top of the red box */
+        position: absolute; 
+        top: -0px; 
+        left: 0; 
+        z-index: 1; 
       }
       .greenbox {
         background-color: green;
