--- a/quizzes/quiz2.html
+++ b/quizzes/quiz2.html
@@ -15,8 +15,8 @@
     display: flex;
     flex-direction: row;
     background-color: cornflowerblue;
-    justify-content: space-around; /* Distribute items evenly in the line */
-    align-items: center; /* Center items vertically in the container */
+    justify-content: space-around; 
+    align-items: center; 
 }
 .box {
     width: 200px;
@@ -26,7 +26,7 @@
     text-align: center;
 }
 .jump {
-    align-self: flex-end; /* Bring this box to the bottom of the flexbox */
+    align-self: flex-end; 
 } 
 
     </style>
