--- a/exercise4/exercise4.html
+++ b/exercise4/exercise4.html
@@ -5,18 +5,30 @@
     <title>Exercise 4</title>
 
     <style>
-      .content {
-        background-image: url('background-image1.jpg'), url('background-image2.jpg');
-        background-repeat: no-repeat, repeat;
-        background-position: top left, bottom right;
-        padding: 20px; /* Add padding to see the backgrounds */
+      #wrapper{
+        max-width: 1200px;
+        margin:0 auto;
+      }
+
+      header{
+        background: url(ww-cast.jpg) right top no-repeat;
+        background-size: cover;
+        height: 150px;
+      }
+
+      header p {
+        background: url(ww-cast.jpg) left top no-repeat;
+        background-size: cover;
+        background-color: rgb(0,0,0);
+        background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 300px, rgba(255,255,255,0) 600px);
+        height: 150px
       }
     </style>
 
   </head>
   <body>
-    <div class="content">
+    <header id="wrapper">
       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-    </div>
+    </header>
   </body>
 </html>
