--- a/exercise5/exercise5.html
+++ b/exercise5/exercise5.html
@@ -9,23 +9,24 @@
       margin: 0 auto;
       font-family: sans-serif;
     }
-
-    
     a {
       color: #333;
+      text-decoration: none; 
     }
-
     a:hover {
-      text-decoration: underline;
+      text-decoration: underline; 
     }
 
     nav a {
-      color: black;
-      text-decoration: none;
+      color: black; 
+    }
+
+    nav a:hover {
+      text-decoration: underline; 
     }
 
     input:focus {
-      outline: 2px solid blue;
+      outline: 2px solid blue; 
     }
   </style>
 </head>
@@ -49,7 +50,7 @@
         <input type="text" id="emailbox" name="emailbox" placeholder="Your email">
         <button>Submit</button>
       </form>
-    </div> <!-- .content -->
-  </div> <!-- #wrapper -->
+    </div> 
+  </div> 
 </body>
 </html>
