--- a/classwebsite/classwebsite.html
+++ b/classwebsite/classwebsite.html
@@ -21,19 +21,18 @@
         <section>
             <h2>List of Assignments</h2>
             <ul>
-                <li><a href="exercise1.html">exercise 1</a></li>
-                <li><a href="exercise2.html">exercise 2</a></li>
-                <li><a href="exercise3.html">exercise 3</a></li>
-                <li><a href="exercise4.html">exercise 4</a></li>
-                <li><a href="exercise5.html">exercise 5</a></li>
-                <li><a href="exercise6.html">exercise 6</a></li>
-                <li><a href="exercise7.html">exercise 7</a></li>
-                <li><a href="exercise8.html">exercise 8</a></li>
-                <li><a href="exercise9.html">exercise 9</a></li>
-                <li><a href="exercise10.html">exercise 10</a></li>
-                <li><a href="midterm.html">Midterm</a></li>
-                <li><a href="Recipe.html">Recipe Assignment</a></li>
-                <li><a href="finalproject.html">Final Project: Design @ CUNY</a></li>
+                <li><a href="links/exercise2.html">exercise 2</a></li>
+                <li><a href="links/exercise3.html">exercise 3</a></li>
+                <li><a href="links/exercise4.html">exercise 4</a></li>
+                <li><a href="links/exercise5.html">exercise 5</a></li>
+                <li><a href="links/exercise6.html">exercise 6</a></li>
+                <li><a href="links/exercise7.html">exercise 7</a></li>
+                <li><a href="links/exercise8.html">exercise 8</a></li>
+                <li><a href="links/exercise9.html">exercise 9</a></li>
+                <li><a href="links/exercise10.html">exercise 10</a></li>
+                <li><a href="links/midterm.html">Midterm</a></li>
+                <li><a href="links/Recipe.html">Recipe Assignment</a></li>
+                <li><a href="links/finalproject.html">Final Project: Design @ CUNY</a></li>
 
 
             </ul>
